# EA_DASHBOARD_WEB

./: .gitignore  SmartGrid_Pro.mq5  X_BTC.mq5  X_Dashbord.mq5  X_Grid.mq5  X_XAU.mq5
.github/workflows/: tauri_build.yml
SimpleDashboard/: index.html  main.js  package-lock.json  package.json  run_server.bat  server.js  sw.js  test.js  version.json
SimpleDashboard/ea-server/: Cargo.toml
SimpleDashboard/ea-server/src/: main.rs
SimpleDashboard/src-tauri/: Cargo.toml  tauri.conf.json
SimpleDashboard/src-tauri/src/: lib.rs
SimpleDashboard/www/: manifest.json
X-Dashbord/ea-server/: Cargo.toml  build.rs
X-Dashbord/ea-server/src/: main.rs
X-Dashbord/ea-server/www/: index.html  version.json
X-Dashbord/mac-app/: package-lock.json  package.json
X-Dashbord/mac-app/src/: index.html  quota.html
X-Dashbord/mac-app/src-tauri/: Cargo.toml  tauri.conf.json
X-Dashbord/mac-app/src-tauri/icons/: icon.icns
X-Dashbord/mac-app/src-tauri/src/: lib.rs  main.rs
logs/: 0_release.txt
logs/release/: 1_Set up job.txt  system.txt
logs2/: 0_release.txt
logs2/release/: 16_Post Checkout repository.txt  17_Complete job.txt  1_Set up job.txt  2_Checkout repository.txt  3_Install Node.js.txt  4_Install Rust.txt  5_Install Tauri CLI.txt  6_Build Tauri App.txt  system.txt
logs3/: 0_release.txt
logs3/release/: 16_Post Checkout repository.txt  17_Complete job.txt  1_Set up job.txt  2_Checkout repository.txt  3_Install Node.js.txt  4_Install Rust.txt  5_Install Tauri CLI.txt  6_Build Tauri App.txt  system.txt
