[package]
name = "x-server"
version = "1.0.9"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
open = "5"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
chrono = "0.4.44"
fltk = { version = "1.5", features = ["fltk-bundled"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[build-dependencies]
winres = "0.1"
