[package]
name = "x-server"
version = "1.5.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
web-push = "0.11"
base64 = "0.22"
openssl = { version = "0.10", features = ["vendored"] }
open = "5"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
chrono = "0.4.44"
fltk = { version = "1.5", features = ["fltk-bundled"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[build-dependencies]
winres = "0.1"
